--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/editItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/editItem.html
@@ -3,20 +3,13 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
-
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <html>
-<%@ page contentType="text/html;charset=UTF-8" language="java"
-pageEncoding="UTF-8" isELIgnored="false" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jstl/core_rt" %>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>商户管理界面 | Starter</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <link rel="stylesheet" href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../../../bower_components/font-awesome/css/font-awesome.min.css">
@@ -28,7 +21,22 @@ pageEncoding="UTF-8" isELIgnored="false" %>
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
   <link rel="stylesheet" href="../../../dist/css/skins/skin-blue.min.css">
-
+<link href="../../../bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
+<link href="../../../bootstrap-fileinput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
+<script src="../../../bootstrap-fileinput/js/plugins/sortable.js" type="text/javascript"></script>
+<script src="../../../bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+    <script src="../../../bootstrap-fileinput/js/locales/fr.js" type="text/javascript"></script>
+    <script src="../../../bootstrap-fileinput/js/locales/es.js" type="text/javascript"></script>
+     <script src="../../../bootstrap-fileinput/themes/explorer-fa/theme.js" type="text/javascript"></script>
+    <script src="../../../bootstrap-fileinput/themes/fa/theme.js" type="text/javascript"></script>
+    <script src="../../../bootstrap-fileinput/js/locales/zh.js"></script>
+  <!-- jQuery 3 -->
+  <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- Bootstrap 3.3.7 -->
+  <script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- AdminLTE App -->
+  <script src="../../../dist/js/adminlte.min.js"></script>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -39,6 +47,16 @@ pageEncoding="UTF-8" isELIgnored="false" %>
   <!-- Google Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+
+
+
+  <link href="../../../bootstrap-fileinput/css/xlstyle.css" rel="stylesheet">
+
+  <!-- 图片上传即使预览插件 -->
+  <link rel="stylesheet"
+        href="../../../bootstrap-fileinput/css/fileinput.min.css">
+  <script type="text/javascript"
+          src="../../../bootstrap-fileinput/js/fileinput.min.js"></script>
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -134,7 +152,7 @@ desired effect
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-   <aside class="main-sidebar">
+ <aside class="main-sidebar">
 
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -171,6 +189,7 @@ desired effect
     </section>
     <!-- /.sidebar -->
   </aside>
+
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -183,32 +202,44 @@ desired effect
 
     <!-- Main content -->
     <section class="content container-fluid">
-    <table class="table table-striped">
-        <thead>
-            <tr><th>图片</th><th>编号</th><th>名称</th><th>简述</th><th>原价</th><th>抵扣积分</th><th>操作</th></tr>
-        </thead>
-        <tbody>
-            <tr><td>
-			<a href="#" class="thumbnail"><img src="1.jpg" alt="通用的占位符缩略图" height="50" width="50"></a>
-			</td><td>001</td><td>毛巾</td><td>毛巾是一种清洁用品，特征为方形纯棉纺织品。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
-            <tr><td><a href="#" class="thumbnail"><img src="2.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>002</td><td>棉被</td><td>被子是床上用品的一种，是面积足以覆盖人体、长方形的布料。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
-            <tr><td><a href="#" class="thumbnail"><img src="3.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>003</td><td>零食</td><td>零食，通常是指一日三餐时间点之外的时间里所食用的食品。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
+<div class="box box-warning">
+            <div class="box-header with-border">
+              <h3 class="box-title">商品添加</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <form role="form">
+                <!-- text input -->
+                <div class="form-group">
+                  <label>商品名称</label>
+                  <input type="text" class="form-control" placeholder="输入商品名称">
+                </div>
+				<div class="form-group">
+                  <label>商品原价</label>
+                  <input type="text" class="form-control" placeholder="输入商品原价">
+                </div>
+				<div class="form-group">
+                  <label>抵扣积分</label>
+                  <input type="text" class="form-control" placeholder="输入抵扣的花旗积分">
+                </div>
+                <!-- textarea -->
+                <div class="form-group">
+                  <label>商品描述</label>
+                  <textarea class="form-control" rows="3" placeholder="输入商品描述"></textarea>
+                </div>
+                <div class="form-group">
+                  <label>商品图片</label>
+                  <input type="file" name="myfile" data-ref="url2"
+                         class="col-sm-10 myfile" value="" /> <input type="hidden"
+                                                                     name="url2" value="">
+                </div>
+                <button type="submit" class="btn btn-success">提 交</button></td>
 
-            <c:forEach items="${mv.items}" var="item">
-              <tr>
-                <td>
-                  <a href="#" class="thumbnail"><img src=${item.logoURL} alt="通用的占位符缩略图" height="50" width="50"></a>
-                </td>
-                <td>${item.ItemID}</td>
-                <td>${item.name}</td>
-                <td>${item.description}</td>
-                <td>${item.originalPrice}</td>
-                <td>${item.points}</td>
-                <td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td>
-              </tr>
-            </c:forEach>
-        </tbody>
-    </table>
+              </form>
+
+            </div>
+            <!-- /.box-body -->
+          </div>
       <!--------------------------
         | Your Page Content Here |
         -------------------------->
@@ -238,15 +269,67 @@ desired effect
 
 <!-- REQUIRED JS SCRIPTS -->
 
-<!-- jQuery 3 -->
-<script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Bootstrap 3.3.7 -->
-<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- AdminLTE App -->
-<script src="../../../dist/js/adminlte.min.js"></script>
+
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. -->
 </body>
+<script type="text/javascript">
+    $(".myfile").fileinput({
+        //上传的地址
+        uploadUrl:"<%=basePath%>food/uploadFile",
+        uploadAsync : false, //默认异步上传
+        showUpload : false, //是否显示上传按钮,跟随文本框的那个
+        showRemove : false, //显示移除按钮,跟随文本框的那个
+        showCaption : true,//是否显示标题,就是那个文本框
+        showPreview : true, //是否显示预览,不写默认为true
+        dropZoneEnabled : false,//是否显示拖拽区域，默认不写为true，但是会占用很大区域
+        //minImageWidth: 50, //图片的最小宽度
+        //minImageHeight: 50,//图片的最小高度
+        //maxImageWidth: 1000,//图片的最大宽度
+        //maxImageHeight: 1000,//图片的最大高度
+        //maxFileSize: 0,//单位为kb，如果为0表示不限制文件大小
+        //minFileCount: 0,
+        maxFileCount : 1, //表示允许同时上传的最大文件个数
+        enctype : 'multipart/form-data',
+        validateInitialCount : true,
+        previewFileIcon : "<i class='glyphicon glyphicon-king'></i>",
+        msgFilesTooMany : "选择上传的文件数量({n}) 超过允许的最大数值{m}！",
+        allowedFileTypes : [ 'image' ],//配置允许文件上传的类型
+        allowedPreviewTypes : [ 'image' ],//配置所有的被预览文件类型
+        allowedPreviewMimeTypes : [ 'jpg', 'png', 'gif' ],//控制被预览的所有mime类型
+        language : 'zh'
+    })
+    //异步上传返回结果处理
+    $('.myfile').on('fileerror', function(event, data, msg) {
+        console.log("fileerror");
+        console.log(data);
+    });
+    //异步上传返回结果处理
+    $(".myfile").on("fileuploaded", function(event, data, previewId, index) {
+        console.log("fileuploaded");
+        var ref = $(this).attr("data-ref");
+        $("input[name='" + ref + "']").val(data.response.url);
+
+    });
+
+    //同步上传错误处理
+    $('.myfile').on('filebatchuploaderror', function(event, data, msg) {
+        console.log("filebatchuploaderror");
+        console.log(data);
+    });
+
+    //同步上传返回结果处理
+    $(".myfile").on("filebatchuploadsuccess",
+        function(event, data, previewId, index) {
+            console.log("filebatchuploadsuccess");
+            console.log(data);
+        });
+
+    //上传前
+    $('.myfile').on('filepreupload', function(event, data, previewId, index) {
+        console.log("filepreupload");
+    });
+</script>
 </html>
