--- a/Backstage/citiMerchant/src/main/webapp/documentation/index.html
+++ b/Backstage/citiMerchant/src/main/webapp/documentation/index.html
@@ -225,7 +225,7 @@
         </ul>
         <div class="callout callout-danger lead">
           <h4>Tip!</h4>
-          <p>The <a href="../WEB-INF/jsp/starter.html">starter page</a> is a good place to start building your app if you'd like to start from scratch.</p>
+          <p>The <a href="../WEB-INF/jsp/starter.jsp">starter page</a> is a good place to start building your app if you'd like to start from scratch.</p>
         </div>
 
         <h3>Layout Options</h3>
